Re-organize src code to enable IDE build
Change-Id: I1ee54ef19919b57372c1f9e9ca235ce345e768e1
Signed-off-by: Prakash <prakashc.p@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,9 +109,9 @@ INSTALL(TARGETS ${MFUGNAME} LIBRARY DESTINATION ${LIBDIR})
 ADD_CUSTOM_TARGET(ug_navibar_layout.edj
 		COMMAND edje_cc -no-save -id ${CMAKE_CURRENT_SOURCE_DIR}/image
 		${EDJE_CFLAGS} -sd  ${CMAKE_CURRENT_SOURCE_DIR}/sounds
-		${CMAKE_CURRENT_SOURCE_DIR}/ug_navibar_layout.edc
+		${CMAKE_CURRENT_SOURCE_DIR}/res/edc/ug_navibar_layout.edc
 		${CMAKE_BINARY_DIR}/ug_navibar_layout.edj
-		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ug_navibar_layout.edc
+		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/res/edc/ug_navibar_layout.edc
 )
 
 ADD_DEPENDENCIES(${PROJECT_NAME} ug_navibar_layout.edj)
@@ -120,9 +120,9 @@ INSTALL(FILES ${CMAKE_BINARY_DIR}/ug_navibar_layout.edj DESTINATION ${EDJDIR})
 
 ADD_CUSTOM_TARGET(ug_edc_image_macro.edj
 		COMMAND edje_cc -no-save -id ${CMAKE_CURRENT_SOURCE_DIR}/icons -id ${CMAKE_CURRENT_SOURCE_DIR}/image
-		${CMAKE_CURRENT_SOURCE_DIR}/ug_edc_image_macro.edc
+		${CMAKE_CURRENT_SOURCE_DIR}/res/edc/ug_edc_image_macro.edc
 		${CMAKE_BINARY_DIR}/ug_edc_image_macro.edj
-		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ug_edc_image_macro.edc
+		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/res/edc/ug_edc_image_macro.edc
 )
 
 ADD_DEPENDENCIES(${PROJECT_NAME} ug_edc_image_macro.edj)
