convert ug into ui-app
Change-Id: I57cc9c040fad074b8ca02774de4baaf2b31b829a
Signed-off-by: Sheenu <sheenu.15@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+PROJECT(ug-myfile-efl C)
+
 IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
         SET(CMAKE_BUILD_TYPE "Release")
 ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
 MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")
-
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-PROJECT(ug-myfile-efl C)
-
 
 ####################################
 ########## SET Directory ###########
@@ -21,7 +20,7 @@ SET(UG-WIDGET-DIR ${UG-SRC-DIR}/widget)
 SET(UG-MEDIADB-DIR ${UG-SRC-DIR}/media-db)
 
 SET(PREFIX ${CMAKE_INSTALL_PREFIX})
-SET(LIBDIR "${PREFIX}/lib")
+SET(BINDIR "${PREFIX}/bin")
 SET(RESDIR "${PREFIX}/res")
 SET(LOCALEDIR "${RESDIR}/${MFUGNAME}/locale")
 SET(IMAGEDIR "${RESDIR}/images/${MFUGNAME}")
@@ -60,6 +59,7 @@ SET(SRCS
 
 INCLUDE_DIRECTORIES(${UGINCLUDE})
 INCLUDE_DIRECTORIES(${UGLIBINCLUDE})
+
 INCLUDE(FindPkgConfig)
 pkg_check_modules(ug_pkgs REQUIRED
 ecore-evas
@@ -74,6 +74,7 @@ dlog
 capi-media-sound-manager
 capi-media-player
 capi-system-device
+capi-system-runtime-info
 notification
 appsvc
 sqlite3
@@ -88,22 +89,24 @@ FOREACH(flag ${ug_pkgs_CFLAGS})
 ENDFOREACH(flag)
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -fvisibility=hidden -fdata-sections -ffunction-sections -Wl,--gc-sections")
+SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -fpie")
+SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall -g -fpie")
 SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")
 
 ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
 ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
-
 
 ADD_DEFINITIONS("-DLIST_PLAY_SUPPORT")
 ADD_DEFINITIONS("-DUG_THUMB_REAL_TIME_UPDATE")
 ADD_DEFINITIONS("-DMF_UG_FEATURE_NEW_UX")
 ADD_DEFINITIONS("-DUG_OPERATION_SELECT_MODE")
 
+ADD_EXECUTABLE(${MFUGNAME} ${SRCS})
+#ADD_LIBRARY(${MFUGNAME} SHARED ${SRCS})
+TARGET_LINK_LIBRARIES(${MFUGNAME} ${ug_pkgs_LDFLAGS} -lm -lpthread)
 
-ADD_LIBRARY(${MFUGNAME} SHARED ${SRCS})
-TARGET_LINK_LIBRARIES(${MFUGNAME} ${ug_pkgs_LDFLAGS} dl)
-
-INSTALL(TARGETS ${MFUGNAME} LIBRARY DESTINATION ${LIBDIR})
+INSTALL(TARGETS ${MFUGNAME} RUNTIME DESTINATION ${BINDIR})
 
 # edje
 ADD_CUSTOM_TARGET(ug_navibar_layout.edj
