Removed unnecessary XML installation and Added privilege
Change-Id: I77a2f1d8dad2f93ee57813be8c836062acd3c2c9
Signed-off-by: Chandan <ch.kumar@samsung.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/res/edje/icons DESTINATION ${RESDI
 INSTALL(FILES ug-myfile-efl.manifest.xml DESTINATION ${MANIFESTDIR} RENAME ${PKGNAME}.xml)
 INSTALL(FILES shared/res/ug-myfile-efl.png DESTINATION ${ICONDIR})
 #INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/res/edje/images/ DESTINATION ${IMGDIR})
-INSTALL(FILES ${PROJECT_NAME}.xml DESTINATION ${MANIFESTDIR})
+#INSTALL(FILES ${PROJECT_NAME}.xml DESTINATION ${MANIFESTDIR})
 
 
 # Install appcontrol icon
